Remove duplicated label names from Forms example page

--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -208,18 +208,18 @@
             'id': i,
             'options': [
                 {
-                    'label': 'One',
+                    'label': 'Checkbox One',
                     'value': 'one',
                     'name': 'one',
                     'checked': true
                 },
                 {
-                    'label': 'Two',
+                    'label': 'Checkbox Two',
                     'value': 'two',
                     'name': 'one'
                 },
                 {
-                    'label': 'Three',
+                    'label': 'Checkbox Three',
                     'value': 'three',
                     'name': 'one'
                 }
@@ -235,17 +235,17 @@
             'id': i,
             'options': [
                 {
-                    'label': 'One',
+                    'label': 'Radio One',
                     'value': 'one',
                     'name': 'one'
                 },
                 {
-                    'label': 'Two',
+                    'label': 'Radio Two',
                     'value': 'two',
                     'name': 'one'
                 },
                 {
-                    'label': 'Three',
+                    'label': 'Radio Three',
                     'value': 'three',
                     'name': 'one'
                 }
@@ -260,32 +260,32 @@
             'id': i,
             'options': [
                 {
-                    'label': 'One',
+                    'label': 'Select2 One',
                     'value': 'one',
                     'name': 'three'
                 },
                 {
-                    'label': 'Two',
+                    'label': 'Select2 Two',
                     'value': 'two',
                     'name': 'three'
                 },
                 {
-                    'label': 'Three',
+                    'label': 'Select2 Three',
                     'value': 'three',
                     'name': 'three'
                 },
                 {
-                    'label': 'Four',
+                    'label': 'Select2 Four',
                     'value': 'four',
                     'name': 'three'
                 },
                 {
-                    'label': 'Five',
+                    'label': 'Select2 Five',
                     'value': 'five',
                     'name': 'three'
                 },
                 {
-                    'label': 'Six',
+                    'label': 'Select2 Six',
                     'value': 'six',
                     'name': 'three'
                 }
