--- a/views/pulsar/v2/helpers/elem.html.twig
+++ b/views/pulsar/v2/helpers/elem.html.twig
@@ -47,7 +47,11 @@ value       | string | Specifies the value of the input
         {% set options = options|defaults({'aria-describedby': options.help_id}) %}
     {% endif %}
 
-    <input{{ attributes(options|exclude('append bare help_id input_placement prepend naked')) }} />
+    {% if options.has_error is defined and options.has_error == true %}
+        {% set options = options|defaults({'aria-invalid': 'true'}) %}
+    {% endif %}
+
+    <input{{ attributes(options|exclude('append bare has_error help_id input_placement prepend naked')) }} />
 
 {% endspaceless %}
 {% endmacro %}
@@ -186,14 +190,17 @@ value       | string | Specifies the value of the input
 {% spaceless %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
-
     {% if options.help_id is defined and options.help_id is not empty %}
         {% set options = options|defaults({'aria-describedby': options.help_id}) %}
     {% endif %}
 
+    {% if options.has_error is defined and options.has_error == true %}
+        {% set options = options|defaults({'aria-invalid': 'true'}) %}
+    {% endif %}
+
     <select{{
         attributes(options
-            |exclude('append bare help_id label prepend selected value options')
+            |exclude('append bare has_error help_id label prepend selected value options')
             |defaults({
                 'class': 'form__control'
             })
@@ -340,9 +347,13 @@ value       | string  | Specifies the value of the input
         {% set options = options|defaults({'aria-describedby': options.help_id}) %}
     {% endif %}
 
+    {% if options.has_error is defined and options.has_error == true %}
+        {% set options = options|defaults({'aria-invalid': 'true'}) %}
+    {% endif %}
+
     <textarea{{
         attributes(options
-            |exclude('append bare help_id prepend value')
+            |exclude('append bare has_error help_id prepend value')
             |defaults({
                 'class': 'form__control'
             })
