fixed incorrect lexicon example

--- a/views/lexicon/forms/select2.html.twig
+++ b/views/lexicon/forms/select2.html.twig
@@ -863,7 +863,7 @@
     }}
 
     {{
-        form.select({
+        form.select2({
             'id': 'select2-32',
             'label': 'Appended button',
             'append': html.button({ 'label': 'foo' }),
