Update compound examples to show partial errors

--- a/views/lexicon/forms/compound.html.twig
+++ b/views/lexicon/forms/compound.html.twig
@@ -274,7 +274,8 @@
                     'id': 'dd-3',
                     'placeholder': 'DD',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -282,7 +283,8 @@
                     'id': 'mm-3',
                     'placeholder': 'MM',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -290,7 +292,8 @@
                     'id': 'yyyy-3',
                     'placeholder': 'YYYY',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 }
             ]
         })
@@ -301,15 +304,17 @@
             'id': 'comp-8',
             'help': 'For example: 25 12 1980',
             'label': 'Date of birth',
-            'error': ['Do this', 'Do this too'],
+            'error': ['Invalid day of birth entered', 'Invalid year of borth entered'],
+            'class': 'form__group--partial-state',
             'inputs': [
                 {
-                    'class': 'form__control-col--1',
+                    'class': 'form__control-col--1 has-error',
                     'label': 'Day',
                     'id': 'dd-4',
                     'placeholder': 'DD',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -320,12 +325,13 @@
                     'type': 'text'
                 },
                 {
-                    'class': 'form__control-col--1',
+                    'class': 'form__control-col--1 has-error',
                     'label': 'Year',
                     'id': 'yyyy-4',
                     'placeholder': 'YYYY',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 }
             ]
         })
@@ -344,7 +350,8 @@
                     'id': 'dd-5',
                     'placeholder': 'DD',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -352,7 +359,8 @@
                     'id': 'mm-5',
                     'placeholder': 'MM',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -360,7 +368,8 @@
                     'id': 'yyyy-5',
                     'placeholder': 'YYYY',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 }
             ]
         })
@@ -388,7 +397,8 @@
                     'id': 'mm-6',
                     'placeholder': 'MM',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -415,7 +425,8 @@
                     'id': 'dd-7',
                     'placeholder': 'DD',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -423,7 +434,8 @@
                     'id': 'mm-7',
                     'placeholder': 'MM',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 },
                 {
                     'class': 'form__control-col--1',
@@ -431,7 +443,8 @@
                     'id': 'yyyy-7',
                     'placeholder': 'YYYY',
                     'show-label': false,
-                    'type': 'text'
+                    'type': 'text',
+                    'has_error': true
                 }
             ]
         })
