--- a/stylesheets/_component.panels.scss
+++ b/stylesheets/_component.panels.scss
@@ -16,7 +16,7 @@
 
     &__body {
         max-height: 20em;
-        overflow-y: auto;
+        // overflow-y: auto;
         padding: 10px $padding-base-horizontal;
 
         p,
