--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -54,17 +54,26 @@ items         | array  | An array of items to put in the dropdown list (usually 
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% set help_id = null %}
-    {% if options.help is defined and options.help is not empty %}
-        {% set help_id = 'guid-' ~ random() %}
-        {% 
-            set options = options|merge({ 
-                'help_id': help_id,
-                'aria-describedby': help_id
-            }) 
-        %}
+    {% set options = modify_options(options) %}
+
+    {# Build aria-described string of guids for help blocks and errors #}
+    {% set describedByIds = [] %}
+
+    {% if options.help_id is defined and options.help_id is not empty %}
+        {% set describedByIds = describedByIds|merge([options.help_id])%}
     {% endif %}
 
+    {% if options.error_ids is defined and options.error_ids is not empty %}
+        {% for id in options.error_ids %}
+            {% set describedByIds = describedByIds|merge([id])%}
+        {% endfor %}
+    {% endif %}
+
+    {% if describedByIds|length %}
+        {% set options = options|defaults({'aria-describedby': describedByIds|join(' ')}) %}
+    {% endif %}
+
+    {# If error is preset add aria-invalid="true" to all inputs #}
     {% set items = options.items %}
 
     {% if options.error is defined and options.error is not empty %}
@@ -83,7 +92,7 @@ items         | array  | An array of items to put in the dropdown list (usually 
     {{
         form.group({
             'parent': options
-                |only('aria-describedby bare class error guidance guidance-container has_error help help_id id label required show-label type')
+                |only('aria-describedby bare class error error_ids guidance guidance-container has_error help help_id id label required show-label type')
                 |merge({'class': options.class|default ~ ' form__button-group'}),
             'controls': {'class': 'btn__group'},
             'inputs': items
@@ -142,18 +151,12 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help help_id id label required show-label')
+                |only('bare class error error_ids guidance guidance-container help help_id id label required show-label')
                 |defaults({
                     'class': 'form-checkbox'
                 }),
@@ -334,8 +337,6 @@ required | bool   | Visually indicates that the field must be completed
 {% spaceless %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {#<pre>{{ dump(options) }}</pre>#}
-
     {{
         elem.input(options
             |exclude('class for guidance-container label show-label')
@@ -468,21 +469,29 @@ show-label | bool   | Control visibility of the `<label>` element without affect
 
     {% endif %}
 
-    {% set help_id = null %}
-    {% if options.help is defined and options.help is not empty %}
-        {% set help_id = 'guid-' ~ random() %}
-        {% 
-            set options = options|merge({ 
-                'help_id': help_id,
-                'aria-describedby': help_id
-            }) 
-        %}
+    {% set options = modify_options(options) %}
+
+    {# Build aria-described string of guids for help blocks and errors #}
+    {% set describedByIds = [] %}
+
+    {% if options.help_id is defined and options.help_id is not empty %}
+        {% set describedByIds = describedByIds|merge([options.help_id])%}
+    {% endif %}
+
+    {% if options.error_ids is defined and options.error_ids is not empty %}
+        {% for id in options.error_ids %}
+            {% set describedByIds = describedByIds|merge([id])%}
+        {% endfor %}
+    {% endif %}
+
+    {% if describedByIds|length %}
+        {% set options = options|defaults({'aria-describedby': describedByIds|join(' ')}) %}
     {% endif %}
 
     {{
         form.group({
             'parent': options
-                |only('aria-describedby bare class error guidance guidance-container help help_id id label required show-label')
+                |only('aria-describedby bare class error error_ids guidance guidance-container help help_id id label required show-label')
                 |exclude('multiple')
                 |defaults({'class': 'form-choice'}),
             'inputs': inputs
@@ -543,10 +552,6 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/util.html.twig' as util %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
     {%
         set options = options|default({})|merge({
             'class': options.class|default ~ ' colorpicker js-colorpicker',
@@ -554,6 +559,8 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
             'type': 'text'
         })
     %}
+
+    {% set options = modify_options(options) %}
 
     {{ form.text(options) }}
 
@@ -583,15 +590,23 @@ https://jadu.github.io/pulsar/form-helpers/compound
         {% set groupClass = groupClass ~ ' has-error' %}
     {% endif %}
 
-    {% set help_id = null %}
-    {% if options.help is defined and options.help is not empty %}
-        {% set help_id = 'guid-' ~ random() %}
-        {% 
-            set options = options|merge({ 
-                'help_id': help_id,
-                'aria-describedby': help_id
-            }) 
-        %}
+    {% set options = modify_options(options) %}
+
+    {# Build aria-described string of guids for help blocks and errors #}
+    {% set describedByIds = [] %}
+
+    {% if options.help_id is defined and options.help_id is not empty %}
+        {% set describedByIds = describedByIds|merge([options.help_id])%}
+    {% endif %}
+
+    {% if options.error_ids is defined and options.error_ids is not empty %}
+        {% for id in options.error_ids %}
+            {% set describedByIds = describedByIds|merge([id])%}
+        {% endfor %}
+    {% endif %}
+
+    {% if describedByIds|length %}
+        {% set options = options|defaults({'aria-describedby': describedByIds|join(' ')}) %}
     {% endif %}
 
     <fieldset{{
@@ -628,7 +643,11 @@ https://jadu.github.io/pulsar/form-helpers/compound
             {% endif %}
         {% endfor %}
 
-        {{ form.error({ 'value': options.error|default }) }}
+        {% if options.error_ids is defined and options.error_ids is not empty %}
+            {{ form.error({ 'value': options.error|default, 'error_ids':  options.error_ids }) }}
+        {% else %}
+            {{ form.error({ 'value': options.error|default }) }}
+        {% endif %}
 
         {% if options.help is defined and options.help is not empty %}
             {{ form.help({ 'value': options.help|default, 'id': options.help_id }) }}
@@ -855,9 +874,7 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
         })
     %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{ form.text(options) }}
 
@@ -958,24 +975,21 @@ value  | string, array  | The string, or array of strings to render inside the e
 {% macro error(options) %}
 {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 {% spaceless %}
-
     {% if options.value is defined and options.value is not empty %}
-
         {% if options.value is not iterable %}
             {% set errors = [options.value] %}
         {% else %}
             {% set errors = options.value %}
         {% endif %}
 
-
-        {% for error in errors %}
-            <span class="help-block is-error">
-                {{ html.icon('warning-sign') }} {{ error|raw -}}
-            </span>
-        {% endfor %}
-
+        {% if options.error_ids is defined and options.error_ids is not empty %}
+            {% for error in errors %}
+                <span class="help-block is-error" id="{{ attribute(options.error_ids, loop.index0) }}">
+                    {{ html.icon('warning-sign') }} {{ error|raw -}}
+                </span>
+            {% endfor %}
+        {% endif %}
     {% endif %}
-
 {% endspaceless %}
 {% endmacro %}
 
@@ -1096,17 +1110,11 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
-            'parent': options|only('bare class error guidance guidance-container help help_id id label required show-label'),
+            'parent': options|only('bare class error error_ids guidance guidance-container help help_id id label required show-label'),
             'inputs': [
                 elem.input(options
                     |exclude('bare class guidance guidance-container error help label show-label')
@@ -1214,8 +1222,6 @@ controls.class    | string | A space separated list of class names
     {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 
     {% set groupClass = 'form__group' %}
-
-    {#<pre>{{ dump(options) }}</pre>#}
 
     {% if options.parent.error is defined and options.parent.error is not empty %}
         {% set groupClass = groupClass ~ ' has-error' %}
@@ -1332,7 +1338,11 @@ controls.class    | string | A space separated list of class names
             </div>
         {% endif %}
 
+        {% if options.parent.error_ids is defined and options.parent.error_ids is not empty %}
+            {{ form.error({ 'value': options.parent.error|default, 'error_ids':  options.parent.error_ids }) }}
+        {% else %}
             {{ form.error({ 'value': options.parent.error|default }) }}
+        {% endif %}
 
         {% if options.parent.help is defined and options.parent.help is not empty and options.parent.help_id is defined and options.parent.help_id is not empty %}
             {{ form.help({ 'value': options.parent.help|default, 'id': options.parent.help_id }) }}
@@ -1542,18 +1552,12 @@ data-*     | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help help_id id label required show-label')
+                |only('bare class error error_ids guidance guidance-container help help_id id label required show-label')
                 |defaults({
                     'class': 'form-radio'
                 }),
@@ -1623,9 +1627,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {% set inputClass = 'radio' %}
     {%
@@ -1660,7 +1662,7 @@ data-*          | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance-container help help_id id')
+                |only('bare class error error_ids guidance-container help help_id id')
                 |defaults({
                     'class': 'form-radio-inline'
                 }),
@@ -1867,17 +1869,11 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id label prepend prepend_type required show-label'),
+            'parent': options|only('append append_type bare class error error_ids guidance guidance-container help help_id id label prepend prepend_type required show-label'),
             'inputs': [
                 elem.select(
                     options
@@ -1950,17 +1946,11 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id prepend prepend_type label required show-label'),
+            'parent': options|only('append append_type bare class error error_ids guidance guidance-container help help_id id prepend prepend_type label required show-label'),
             'inputs': [
                 elem.select2(options
                     |exclude('bare class error guidance guidance-container help label show-label')
@@ -2080,17 +2070,11 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {% set options = options|default({})|merge({ 'type': options.type|default('text') }) %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
-            'parent': options|only('append append_type bare class error guidance guidance-container help help_id id label prepend prepend_type required show-label'),
+            'parent': options|only('append append_type bare class error error_ids guidance guidance-container help help_id id label prepend prepend_type required show-label'),
             'inputs': [
                 elem.input(
                     options|exclude('append_type bare class error guidance guidance-container help label prepend_type show-label')
@@ -2154,17 +2138,11 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     {% import _self as form %}
     {% import '@pulsar/pulsar/v2/helpers/elem.html.twig' as elem %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {{
         form.group({
-            'parent': options|only('bare class error guidance guidance-container help help_id id label required show-label'),
+            'parent': options|only('bare class error error_ids guidance guidance-container help help_id id label required show-label'),
             'inputs': [
                 elem.textarea(options
                     |exclude('bare class error guidance guidance-container help label show-label')
@@ -2236,7 +2214,6 @@ data-*      | string | Data attributes, eg: `'data-foo': 'bar'`
     %}
 
     {{ form.text(options) }}
-
 {% endspaceless %}
 {% endmacro %}
 
@@ -2292,13 +2269,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 
     {% set toggleLabel = '<span class="hide">' ~ options.label ~ '</span>' %}
 
-    {% if options.help is defined and options.help is not empty %}
-        {% set options = options|merge({ 'help_id': 'guid-' ~ random() }) %}
-    {% endif %}
-
-    {% if options.error is defined and options.error is not empty %}
-        {% set options = options|merge({ 'has_error': true }) %}
-    {% endif %}
+    {% set options = modify_options(options) %}
 
     {%
         set toggle = elem.input(options
@@ -2317,7 +2288,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
     {{
         form.group({
             'parent': options
-                |only('bare class error guidance guidance-container help help_id label required show-label')
+                |only('bare class error error_ids guidance guidance-container help help_id label required show-label')
                 |merge({
                     'class': options.class|default ~ ' form__group--toggle'
                 }),
