--- a/views/lexicon/forms/toggle-switch.html.twig
+++ b/views/lexicon/forms/toggle-switch.html.twig
@@ -71,7 +71,7 @@
     {{
         form.toggle_switch({
             'id': 'toggle-7',
-            'label': 'Text field with error',
+            'label': 'Toggle switch with error',
             'error': 'Please complete this field'
         })
     }}
@@ -79,7 +79,7 @@
     {{
         form.toggle_switch({
             'id': 'toggle-8',
-            'label': 'Text field with multiple errors',
+            'label': 'Toggle switch with multiple errors',
             'error': ['Do this', 'Do this too']
         })
     }}
@@ -87,7 +87,7 @@
     {{
         form.toggle_switch({
             'id': 'toggle-9',
-            'label': 'Text field with error and help',
+            'label': 'Toggle switch with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
         })
@@ -97,7 +97,7 @@
         form.toggle_switch({
             'id': 'toggle-10',
             'class': 'has-error',
-            'label': 'Text field error with help only',
+            'label': 'Toggle switch error with help only',
             'help': 'Help text to give more information about expected input'
         })
     }}
