--- a/views/lexicon/forms/range.html.twig
+++ b/views/lexicon/forms/range.html.twig
@@ -196,7 +196,7 @@
     {{
         form.range({
             'id': 'range-11',
-            'label': 'Text field with error',
+            'label': 'Range field with error',
             'error': 'Please complete this field'
         })
     }}
@@ -204,7 +204,7 @@
     {{
         form.range({
             'id': 'range-12',
-            'label': 'Text field with multiple errors',
+            'label': 'Range field with multiple errors',
             'error': ['Do this', 'Do this too']
         })
     }}
@@ -212,7 +212,7 @@
     {{
         form.range({
             'id': 'range-13',
-            'label': 'Text field with error and help',
+            'label': 'Range field with error and help',
             'error': 'Please complete this field',
             'help': 'Help text to give more information about expected input'
         })
@@ -222,7 +222,7 @@
         form.range({
             'id': 'range-14',
             'class': 'has-error',
-            'label': 'Text field error with help only',
+            'label': 'Range field error with help only',
             'help': 'Help text to give more information about expected input'
         })
     }}
