fixed duplicate IDs causing console errors in lexicon

--- a/views/lexicon/forms/all.html.twig
+++ b/views/lexicon/forms/all.html.twig
@@ -107,7 +107,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Value',
-                    'id': 'value-1',
+                    'id': 'value-0',
                     'maxlength': '3',
                     'show-label': false,
                     'type': 'text'
@@ -115,7 +115,7 @@
                 {
                     'class': 'u-width-auto',
                     'label': 'Unit of time',
-                    'id': 'Unit-1',
+                    'id': 'unit-0',
                     'show-label': false,
                     'type': 'select',
                     'options': [
