Make sure state classes use AA compliant colours

--- a/stylesheets/_config.theme.scss
+++ b/stylesheets/_config.theme.scss
@@ -109,19 +109,19 @@ $input-color-placeholder:             color(gray, light) !default;
 $legend-border-color:                 color(border) !default;
 $input-group-addon-border-color:      $input-border !default;
 
-$state-warning-text:             #c09853 !default;
+$state-warning-text:             #af6318 !default; // 4.54:1 AA Compliant
 $state-warning-bg:               #fcf8e3 !default;
 $state-warning-border:           darken($state-warning-bg, 10%) !default;
 
-$state-danger-text:              #b94a48 !default;
+$state-danger-text:              #b94a48 !default; // 5.08:1 AA Compliant
 $state-danger-bg:                #f2dede !default;
 $state-danger-border:            darken($state-danger-bg, 10%) !default;
 
-$state-success-text:             #468847 !default;
+$state-success-text:             #448345 !default; // 4.59:1 AA Compliant
 $state-success-bg:               #dff0d8 !default;
 $state-success-border:           darken($state-success-bg, 10%) !default;
 
-$state-info-text:                #3a87ad !default;
+$state-info-text:                #367da1 !default; // 4.56:1 AA Compliant
 $state-info-bg:                  #d9edf7 !default;
 $state-info-border:              darken($state-info-bg, 10%) !default;
 
