--- a/views/lexicon/forms/content.html.twig
+++ b/views/lexicon/forms/content.html.twig
@@ -31,7 +31,7 @@
 
     {{
         form.content({
-            'label': 'Content with value',
+            'label': 'Content with hidden label',
             'value': 'My value',
             'show-label': false,
             'help': 'This example hides the label with the <code>show-label</code> option'
@@ -81,7 +81,7 @@
         form.content({
             'class': 'has-changed',
             'help': 'Highlight whether an action elsewhere affects an input',
-            'label': '"class": "has-changed"',
+            'label': 'Content with has-changed class',
             'value': 'My value'
         })
     }}
@@ -89,7 +89,7 @@
         form.content({
             'class': 'has-success',
             'help': 'Something good happened',
-            'label': '"class": "has-success"',
+            'label': 'Content with has-success class',
             'value': 'My value'
         })
     }}
@@ -98,7 +98,7 @@
         form.content({
             'class': 'has-warning',
             'help': 'Something bad happened',
-            'label': '"class": "has-warning"',
+            'label': 'Content with has-warning class',
             'value': 'My value'
         })
     }}
@@ -106,7 +106,7 @@
         form.content({
             'class': 'has-error',
             'help': 'Automatically added if using <code>error</code> option',
-            'label': '"class": "has-error"',
+            'label': 'Content with has-error class',
             'value': 'My value'
         })
     }}
@@ -122,7 +122,18 @@
     {{ form.fieldset_end() }}
 
     {{
-        form.end()
+        form.end({
+            'actions': [
+                html.button({
+                    'label': 'Save',
+                    'class': 'btn--primary'
+                }),
+                html.button({
+                    'label': 'Cancel',
+                    'class': 'btn--naked'
+                })
+            ]
+        })
     }}
 
 {% endblock tab_content %}
