--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -6,7 +6,7 @@
 <nav class="nav-main" aria-label="Primary" id="aria-main-nav">
     <div class="nav-primary t-nav-primary">
         <a href="{{ options.brand_link|default('/') }}" class="jadu-branding">
-            <span class="jadu-logomark"></span>
+            <span class="jadu-logomark">Return to home</span>
             <span class="jadu-wordmark">Jadu</span>
         </a>
         <ul class="nav-items">
@@ -22,13 +22,13 @@
 
     <div class="nav-secondary t-nav-secondary" id="aria-secondary-nav">
 
-        <a href="#close" class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</a>
+        <button href="#close" class="nav-close" data-nav-action="close">{{ html.icon('remove', { 'label': 'Close expanded menu' }) }}</button>
 
         {% if options.data is iterable %}
             {% for options in options.data %}
                 {% if options.items is defined and options.items is iterable %}
 
-                    <div class="nav-list" data-nav="{{ options.href }}">
+                    <div class="nav-list" data-nav="{{ options.href }}" id="{{ options.label|lower }}">
                         <h2 class="nav-item nav-item--header t-nav-header" id="aria-secondary-nav-heading-{{ options.label|raw }}">{{ options.label|raw }}</h2>
 
                         <ul class="nav-items">
